# rocket_surgeon

./: .gitignore  .venv  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  PLATOON-FINDINGS.md  README.md  deep-research-brief-chunk-a.md  deny.toml  lefthook.yml  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.context/: README.md  deep-research-brief.md
.context/analysis/: debugger-protocol-patterns.md  framework-compilation.md  gpu-infrastructure.md  hook-interception-patterns.md  interpretability-tooling.md  observability-ebpf.md  tui-rust-infrastructure.md
.context/beads/: BEAD-0001-architecture-plan.md  BEAD-0002-quarantine-reference-impls.md  BEAD-0003-adr-language-split.md  BEAD-0004-adr-protocol-design.md  BEAD-0005-adr-probe-model.md  BEAD-0006-design-spec.md  BEAD-0007-plan-doc.md  BEAD-0008-daemon-silent-attach-failure.md  BEAD-0009-lefthook-glob-and-tests-lint-debt.md  BEAD-0010-perfetto-multi-gpu-structural.md  BEAD-0011-e2e-suite-not-gated.md  BEAD-0012-tick-position-phase-correction.md  BEAD-0013-envelopemode-inspect-view-replay.md  BEAD-0014-tui-clippy-lint-debt.md  BEAD-0015-tui-component-architecture-rework.md  BEAD-0016-no-remote-ci.md  BEAD-0017-intervene-registry.md  BEAD-0018-replay-orchestration.md  BEAD-0019-bridge-py-v2-probeframe-drift.md  BEAD-0020-tui-spawn-daemon.md  BEAD-0021-workspace-lints-duplication.md
.context/lit-reviews/: gpu-compute-platforms.md  llm-native-ux.md  ml-framework-internals.md  model-host-architecture.md  nnsight-transformerlens.md  phase1-remaining-synthesis.md  probes.md  profilers.md  pytorch-hooks-internals.md  pyvene-inseq-circuitsvis.md  rtos-realtime-gpu.md  shared-memory-tensor-handoff.md  systems-observability.md  tensor-encoding-wire-format.md  tensor-summary-statistics.md  traditional-debuggers.md  transformer-surgery-papers.md
.context/plans/: 2026-05-21-remote-ci.md  2026-05-21-tui-slice3-component-trait.md  2026-05-22-tui-layer-stack.md  2026-05-22-tui-slice4-effect-channel.md  2026-05-22-tui-spawn-daemon.md  2026-05-27-replay-reverse-divergence-fanout.md  phase0-wu04-capability-spec.md  phase0-wu05-error-registry.md  phase0-wu06-gherkin-tck.md  phase0-wu07-tck-harness.md  phase1-execution.md  wu-1.1-daemon-skeleton.md  wu-1.16-phase1-smoke-test.md  wu-1.4-tensor-store.md  wu-1.9-pyo3-bridge.md  wu-bead-0008-attach-failure.md  wu-bead-0011-e2e-gate.md
.context/research-reports/: 2026-05-14-architectural-research.md  2026-05-24-checkpoint-design-critique.md  2026-05-24-checkpoint-spec-verification.md
.context/session-notes/: 2026-05-14-project-kickoff.md  2026-05-24-phase3a-checkpoint-state-tier.md
.github/workflows/: ci.yml
crates/perfetto-writer/: Cargo.toml
crates/perfetto-writer/src/: intern.rs  lib.rs  proto.rs  varint.rs  writer.rs
crates/perfetto-writer/tests/: intern_props.rs  proto_props.rs  varint_props.rs  writer_model.rs
crates/rocket-surgeon/: Cargo.toml
crates/rocket-surgeon-orchestrator/: Cargo.toml
crates/rocket-surgeon-orchestrator/src/: dispatch.rs  main.rs  worker_handle.rs
crates/rocket-surgeon-probes/: Cargo.toml
crates/rocket-surgeon-probes/src/: assertion.rs  grammar.rs  lib.rs  registry.rs
crates/rocket-surgeon-probes/tests/: assertion_props.rs  grammar_props.rs  registry_model.rs
crates/rocket-surgeon-protocol/: Cargo.toml
crates/rocket-surgeon-protocol/src/: errors.rs  jsonrpc.rs  lib.rs  messages.rs  types.rs
crates/rocket-surgeon-protocol/tests/: proptest_wire_format.proptest-regressions  proptest_wire_format.rs  serde_roundtrip.rs
crates/rocket-surgeon-python/: Cargo.toml
crates/rocket-surgeon-python/src/: lib.rs  probe_frame.rs
crates/rocket-surgeon-shm/: Cargo.toml  build.rs
crates/rocket-surgeon-shm/src/: cleanup.rs  lib.rs  region.rs  ring.rs
crates/rocket-surgeon-shm/tests/: loom_ring.rs  prop_config_frame.rs  prop_ring.proptest-regressions  prop_ring.rs  stateful_ring.rs
crates/rocket-surgeon-transport/: Cargo.toml
crates/rocket-surgeon-tui/: Cargo.toml
crates/rocket-surgeon-tui/src/: action.rs  app.rs  client.rs  daemon.rs  input.rs  main.rs  render.rs  state.rs  tiling.rs  tui.rs
crates/rocket-surgeon-tui/src/client/: connection.rs  subscription.rs
crates/rocket-surgeon-tui/src/components/: command_line.rs  layer_stack.rs  mod.rs  probe_watch.rs  status_bar.rs  tensor_detail.rs
crates/rocket-surgeon-tui/src/input/: events.rs  mode.rs  terminal.rs
crates/rocket-surgeon-tui/src/render/: capability.rs  compositor.rs
crates/rocket-surgeon-tui/src/state/: cache.rs  diff.rs  reducer.rs
crates/rocket-surgeon-worker/: Cargo.toml
crates/rocket-surgeon-worker/src/: adapter.rs  bridge.rs  capture.rs  checkpoint.rs  dispatch.rs  kv.rs  main.rs  replay.rs  skin.rs  step_driver.rs  tick.rs
crates/rocket-surgeon/proptest-regressions/: session_fsm_proptest.txt
crates/rocket-surgeon/src/: bundle.rs  dispatch.rs  main.rs  notifications.rs  orchestrator_handle.rs  perfetto_sink.rs  server.rs  session.rs  session_fsm_proptest.rs  tensor_stats.rs  tensor_store.rs  tensor_store_proptest.rs  trace_log.rs
docs/: chunk_a_research_reply.md  handoff-phase-1-complete.md  handoff-tui-phase-4.1-cr-remediation.md  handoff-wu-1.13-built-in-views.md
docs/adr/: ADR-0001-language-split.md  ADR-0002-protocol-design.md  ADR-0003-probe-model.md  ADR-0004-three-process-architecture.md  ADR-0005-tick-model.md  ADR-0006-tensor-handling.md  ADR-0007-wire-format-breaking-change.md  (+4 more)
protocol/: README.md  capabilities.md  probe-grammar.ebnf
scripts/: bootstrap.sh  dev-cockpit-kill.sh  dev-cockpit.sh  dev-session.py  pre-commit
tests/: bench_intervention_overhead.py  bench_overhead.py  e2e_harness.py  test_e2e_adapter.py  test_e2e_bundle.py  test_e2e_checkpoint.py  test_e2e_dev_session.py  test_e2e_head_ablation.py  test_e2e_inspect.py  test_e2e_interventions.py  test_e2e_layer_step.py  test_e2e_lifecycle.py  test_e2e_perfetto.py  test_e2e_phase1.py  test_e2e_probes.py  test_e2e_shm.py  test_e2e_stepping.py  test_e2e_subscribe.py  test_e2e_view.py  test_ioi_circuit.py  try_gpt2.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+205 files in other folders)
