[package]
name = "perfetto-writer"
description = "Standalone Perfetto trace writer — no protoc, no C++ FFI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
prost = "0.14"
thiserror.workspace = true

[lints]
workspace = true
