[package]
name = "rocket-surgeon-probes"
description = "DTrace-inspired probe system for rocket-surgeon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rocket-surgeon-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
