[package]
name = "rocket-surgeon-protocol"
description = "JSON-RPC protocol types for rocket-surgeon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
