[package]
name = "rocket-surgeon-python"
description = "PyO3 Python extension module for rocket-surgeon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rocket_surgeon"
crate-type = ["cdylib"]

[dependencies]
blake3.workspace = true
pyo3.workspace = true
thiserror.workspace = true

[lints]
workspace = true
