[package]
name = "rocket-surgeon-shm"
description = "POSIX shared memory ring buffer for rocket-surgeon tensor transfer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2"
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

[lints.rust]
unsafe_code = "allow"
rust_2024_compatibility = { level = "warn", priority = -1 }
elided_lifetimes_in_paths = "warn"
unused_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
cognitive_complexity = "allow"
struct_field_names = "allow"
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_type_annotations = "warn"
use_self = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"
