[package]
name = "rocket-surgeon-shm"
description = "POSIX shared memory ring buffer for rocket-surgeon tensor transfer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2"
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

[lints]
workspace = true
