[package]
name = "rocket-surgeon-tui"
description = "Terminal UI client for rocket-surgeon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rocket-surgeon-tui"
path = "src/main.rs"

[dependencies]
rocket-surgeon-protocol.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
