[package]
name = "rocket-surgeon-worker"
description = "Per-rank model worker for rocket-surgeon — embeds Python via PyO3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rs-worker"
path = "src/main.rs"

[dependencies]
rocket-surgeon-transport.workspace = true
rocket-surgeon-protocol.workspace = true
pyo3 = { version = "0.24", features = ["auto-initialize"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[lints]
workspace = true
