[package]
name = "rocket-surgeon"
description = "Multi-GPU transformer forward pass debugger and surgery tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rocket-surgeon"
path = "src/main.rs"

[dependencies]
rocket-surgeon-protocol.workspace = true
rocket-surgeon-probes.workspace = true
rocket-surgeon-transport.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
half.workspace = true
blake3.workspace = true

[lints]
workspace = true
